--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "@farcaster/auth-kit": "^0.6.0",
+    "@standard-crypto/farcaster-js-hub-rest": "^1.5.0",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.6.3",
     "graphql": "^16.10.0",
     "next": "15.2.5",
     "node-fetch": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
