--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@farcaster/auth-kit": "^0.6.0",
     "@standard-crypto/farcaster-js-hub-rest": "^1.5.0",
-    "axios": "^1.8.4",
+    "axios": "~1.6.8",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.3",
